--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#526BA7</color>
+    <color name="colorPrimaryDark">#1F54C3</color>
+    <color name="colorAccent">#5B92BD</color>
+    <color name="colorbtn">#009688</color>
+
 </resources>
